--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
     </div>
     <footer>
-        <p>Made with Love by Shelby</p>
+        <p>Made with <span id="heart">&hearts;</span> by Shelby</p>
     </footer>
     <script src="script.js"></script>
 </body>
