wrote displayTip function and updated styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Tip Calculator</h1>
         <form>
             <p class="question-text">What is the bill total, before tax?</p>
-            <input type="text" placeholder="Bill Amount" required id="bill-total"></input>
+            <span class="question-text">$</span><input type="text" placeholder="Bill Amount" required id="bill-total"></input>
             <p class="question-text">How was the service?</p>
             <select required id="service-quality">
                 <option value="0.25">Excellent! - 25%</option>
