--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <span class="question-text">$</span><input type="text" placeholder="Bill Amount" required id="bill-total"></input>
             <p class="question-text">How was the service?</p>
             <select required id="service-quality">
+                <option value="" disabled selected>Select an option</option>
                 <option value="0.25">Excellent! - 25%</option>
                 <option value="0.2">Great - 20%</option>
                 <option value="0.15">Okay - 15%</option>
