--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Tip Calculator</h1>
         <form>
             <p class="question-text">What is the bill total, before tax?</p>
-            <span class="question-text">$</span><input type="text" placeholder="Bill Amount" required id="bill-total"></input>
+            <span class="dollar-sign">$</span><input type="text" placeholder="Bill Amount" required id="bill-total"></input>
             <p class="question-text">How was the service?</p>
             <select required id="service-quality">
                 <option value="" disabled selected>Select an option</option>
@@ -27,7 +27,7 @@
         </form>
         <section id="tip-section">
             <p class="tip-subtitle">Tip Amount:</p>
-            <h2 id="tip-amount"></h2>
+            <h2 id="tip-amount" class="dollar-sign"></h2>
             <p class="tip-subtitle">each</p>
         </section>
     </div>
