--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <h2 id="tip-amount" class="dollar-sign"></h2>
             <p class="tip-subtitle">each</p>
         </section>
+        <section id="error-section">
+            <h2 id="error"></h2>
+        </section>
     </div>
     <footer>
         <p>Made with <span id="heart">&hearts;</span> by Shelby</p>
